// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Seo /> should render with props 1`] = `
[
  <html
    lang="en"
  />,
  <title>
    Hosting a static website on Amazon S3
  </title>,
  <meta
    content="public, max-age=0, must-revalidate"
    httpEquiv="cache-control"
  />,
  <meta
    content="Hosting a simple static website on Amazon Web Services (AWS) can be daunting at first, but luckily it’s quite straightforward. One option..."
    name="description"
  />,
  <meta
    content="Hosting a static website on Amazon S3"
    property="og:title"
  />,
  <meta
    content="Hosting a simple static website on Amazon Web Services (AWS) can be daunting at first, but luckily it’s quite straightforward. One option..."
    property="og:description"
  />,
  <meta
    content="website"
    property="og:type"
  />,
  <meta
    content="Hosting a static website on Amazon S3"
    name="twitter:title"
  />,
  <meta
    content="Hosting a simple static website on Amazon Web Services (AWS) can be daunting at first, but luckily it’s quite straightforward. One option..."
    name="twitter:description"
  />,
  <meta
    content="summary"
    name="twitter:card"
  />,
  <meta
    content="https://www.brokenrobot.xyzhosting-a-static-website-on-amazon-s3"
    name="twitter:url"
  />,
]
`;

exports[`<Seo /> should render without props 1`] = `
[
  <html
    lang="en"
  />,
  <title>
    Broken Robot
  </title>,
  <meta
    content="public, max-age=0, must-revalidate"
    httpEquiv="cache-control"
  />,
  <meta
    content="Personal website and blog of Tamas Mezei. Welcome to my little corner of the web, where I share my professional experiences, thoughts, adventures, and projects with the world."
    name="description"
  />,
  <meta
    content="Broken Robot"
    property="og:title"
  />,
  <meta
    content="Personal website and blog of Tamas Mezei. Welcome to my little corner of the web, where I share my professional experiences, thoughts, adventures, and projects with the world."
    property="og:description"
  />,
  <meta
    content="website"
    property="og:type"
  />,
  <meta
    content="Broken Robot"
    name="twitter:title"
  />,
  <meta
    content="Personal website and blog of Tamas Mezei. Welcome to my little corner of the web, where I share my professional experiences, thoughts, adventures, and projects with the world."
    name="twitter:description"
  />,
  <meta
    content="summary"
    name="twitter:card"
  />,
  <meta
    content="https://www.brokenrobot.xyz"
    name="twitter:url"
  />,
]
`;
